fix nav on mobile (again)

--- a/components/_entry/index.css
+++ b/components/_entry/index.css
@@ -15,7 +15,7 @@
 
 
 html, body, #app {
-  height: 100%;
+  min-height: 100%;
   background: var(--background-body);
 }
 
